fixed result spacing

--- a/css/result.sass
+++ b/css/result.sass
@@ -3,18 +3,15 @@ $borderSize: 4px
 .results
   margin: 2em auto 0em auto
   padding-bottom: 8em
-  ul
-    text-align: justify
-    font-size: 0
 
 .result
   font-size: 16px
   display: inline-block
-  width: 33%
+  width: 32.9%
   border: $borderSize solid $primaryColor
   text-align: center
   padding: 2em 1.2em 3em 1.2em
-  margin: 0.2em 0 0 0
+  margin: 0.4em 0 0 0
   position: relative
   vertical-align: top
   height: 16em
